React - Copy/src/antlr/ReactParser.java
// Generated from /home/elyas/Documents/compiler/AfterPropsSemantic/completeParserHefawii/React - Copy/src/antlr/ReactParser.g4 by ANTLR 4.13.1
package antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class ReactParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, IF=2, ELSEIF=3, ELSE=4, FOR=5, WHILE=6, SWITCH=7, CASE=8, BREAK=9, 
		CONTINUE=10, DEFAULT=11, DO=12, TRY=13, CATCH=14, FINALLY=15, THROW=16, 
		FUNCTION=17, RETURN=18, EVENT_ATTRIBUTE=19, NEW=20, ARROW=21, EQUAL=22, 
		PLUS_EQUALS=23, MINUS_EQUALS=24, TIMES_EQUALS=25, DIVIDE_EQUALS=26, MODULO_EQUALS=27, 
		PLUS_ONE=28, MINUS_ONE=29, PLUS=30, MINUS=31, STAR=32, DIVIDE=33, MODULO=34, 
		AND=35, OR=36, NOT=37, EQUAL_TO=38, NOT_EQUAL=39, GREATER_THAN=40, LESS_THAN=41, 
		GREATER_THAN_OR_EQUAL=42, LESS_THAN_OR_EQUAL=43, SINGLE_LINE_COMMENT=44, 
		COMMENT_BLOCK=45, LPAREN=46, RPAREN=47, LSBRACKET=48, RSBRACKET=49, LCURLY=50, 
		RCURLY=51, COMMA=52, SEMI=53, Integer=54, Float=55, DOT=56, COLON=57, 
		QUESITIONMARK=58, String=59, Boolean=60, Undefined=61, Null=62, CONST=63, 
		LET=64, VAR=65, ASYNC=66, AWAIT=67, EXPORT=68, IMPORT=69, EXPORT_DEFAULT=70, 
		FROM=71, AS=72, USESTATE=73, USEEFFECT=74, CREATEELEMENT=75, USEREF=76, 
		HTML_ATTRIBUTE_NAME=77, IDENTIFIER=78, ONCLICK=79;
	public static final int
		RULE_program = 0, RULE_id = 1, RULE_hooks = 2, RULE_if_condition_semantic = 3, 
		RULE_elseIf_condition_semantic = 4, RULE_else_condition_semantic = 5, 
		RULE_tenaryExpression_semantic = 6, RULE_while_semantic = 7, RULE_do_while_semantic = 8, 
		RULE_for_loop_semantic = 9, RULE_try_expression_semantic = 10, RULE_catch_expression_semantic = 11, 
		RULE_finally_expression_semantic = 12, RULE_throwEx_semantic = 13, RULE_semantic_rule = 14, 
		RULE_comment = 15, RULE_operator = 16, RULE_operation_condition = 17, 
		RULE_operation_element = 18, RULE_condition = 19, RULE_conditions = 20, 
		RULE_and_or = 21, RULE_if_condition = 22, RULE_elseIf_condition = 23, 
		RULE_else_condition = 24, RULE_tenaryExpression = 25, RULE_while = 26, 
		RULE_do_while = 27, RULE_for_loop = 28, RULE_try_expression = 29, RULE_catch_expression = 30, 
		RULE_finally_expression = 31, RULE_throwEx = 32, RULE_objectLiteral = 33, 
		RULE_property = 34, RULE_objectExpression = 35, RULE_literal = 36, RULE_unaryExpression = 37, 
		RULE_expression = 38, RULE_memberExpression = 39, RULE_variable_declaration_keywords = 40, 
		RULE_variableDeclaration = 41, RULE_variableDeclarator = 42, RULE_array = 43, 
		RULE_arrayElement = 44, RULE_object = 45, RULE_argument = 46, RULE_functionBody = 47, 
		RULE_statement = 48, RULE_returnStatement = 49, RULE_namedFunctionDeclaration = 50, 
		RULE_arrowFunctionDeclaration = 51, RULE_anonymousFunctionDeclaration = 52, 
		RULE_function = 53, RULE_functionCall = 54, RULE_exportSpecifier = 55, 
		RULE_exportStatement = 56, RULE_exportDefault = 57, RULE_namedExport = 58, 
		RULE_exportAll = 59, RULE_moduleImport = 60, RULE_normalImport = 61, RULE_importStatement = 62, 
		RULE_importSpecifier = 63, RULE_jsx = 64, RULE_openTag = 65, RULE_closeTag = 66, 
		RULE_selfClosingElement = 67, RULE_jsxExpression = 68, RULE_normalJsxElement = 69, 
		RULE_jsxFragment = 70, RULE_jsxAttribute = 71, RULE_spreadOperation = 72, 
		RULE_useStateDeclaration = 73, RULE_useRefDeclaration = 74, RULE_useEffectDeclaration = 75, 
		RULE_dependencyArray = 76, RULE_props = 77, RULE_pureReactElement = 78, 
		RULE_component_return_statment = 79, RULE_functionalComponent = 80, RULE_arrowComponentDeclaration = 81, 
		RULE_namedComponentDeclaration = 82, RULE_componentFunctionBody = 83;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "id", "hooks", "if_condition_semantic", "elseIf_condition_semantic", 
			"else_condition_semantic", "tenaryExpression_semantic", "while_semantic", 
			"do_while_semantic", "for_loop_semantic", "try_expression_semantic", 
			"catch_expression_semantic", "finally_expression_semantic", "throwEx_semantic", 
			"semantic_rule", "comment", "operator", "operation_condition", "operation_element", 
			"condition", "conditions", "and_or", "if_condition", "elseIf_condition", 
			"else_condition", "tenaryExpression", "while", "do_while", "for_loop", 
			"try_expression", "catch_expression", "finally_expression", "throwEx", 
			"objectLiteral", "property", "objectExpression", "literal", "unaryExpression", 
			"expression", "memberExpression", "variable_declaration_keywords", "variableDeclaration", 
			"variableDeclarator", "array", "arrayElement", "object", "argument", 
			"functionBody", "statement", "returnStatement", "namedFunctionDeclaration", 
			"arrowFunctionDeclaration", "anonymousFunctionDeclaration", "function", 
			"functionCall", "exportSpecifier", "exportStatement", "exportDefault", 
			"namedExport", "exportAll", "moduleImport", "normalImport", "importStatement", 
			"importSpecifier", "jsx", "openTag", "closeTag", "selfClosingElement", 
			"jsxExpression", "normalJsxElement", "jsxFragment", "jsxAttribute", "spreadOperation", 
			"useStateDeclaration", "useRefDeclaration", "useEffectDeclaration", "dependencyArray", 
			"props", "pureReactElement", "component_return_statment", "functionalComponent", 
			"arrowComponentDeclaration", "namedComponentDeclaration", "componentFunctionBody"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'if'", null, "'else'", "'for'", "'while'", "'switch'", "'case'", 
			"'break'", "'continue'", "'default'", "'do'", "'try'", "'catch'", "'finally'", 
			"'throw'", "'function'", "'return'", null, null, "'=>'", "'='", "'+='", 
			"'-='", "'*='", "'/='", "'%='", "'++'", "'--'", "'+'", "'-'", "'*'", 
			"'/'", "'%'", "'&&'", "'||'", "'!'", null, "'!='", "'>'", "'<'", "'>='", 
			"'<='", null, null, "'('", "')'", "'['", "']'", "'{'", "'}'", "','", 
			"';'", null, null, "'.'", "':'", "'?'", null, null, "'undefined'", "'null'", 
			"'const'", "'let'", "'var'", "'async'", "'await'", "'export'", "'import'", 
			null, "'from'", "'as'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS", "IF", "ELSEIF", "ELSE", "FOR", "WHILE", "SWITCH", "CASE", 
			"BREAK", "CONTINUE", "DEFAULT", "DO", "TRY", "CATCH", "FINALLY", "THROW", 
			"FUNCTION", "RETURN", "EVENT_ATTRIBUTE", "NEW", "ARROW", "EQUAL", "PLUS_EQUALS", 
			"MINUS_EQUALS", "TIMES_EQUALS", "DIVIDE_EQUALS", "MODULO_EQUALS", "PLUS_ONE", 
			"MINUS_ONE", "PLUS", "MINUS", "STAR", "DIVIDE", "MODULO", "AND", "OR", 
			"NOT", "EQUAL_TO", "NOT_EQUAL", "GREATER_THAN", "LESS_THAN", "GREATER_THAN_OR_EQUAL", 
			"LESS_THAN_OR_EQUAL", "SINGLE_LINE_COMMENT", "COMMENT_BLOCK", "LPAREN", 
			"RPAREN", "LSBRACKET", "RSBRACKET", "LCURLY", "RCURLY", "COMMA", "SEMI", 
			"Integer", "Float", "DOT", "COLON", "QUESITIONMARK", "String", "Boolean", 
			"Undefined", "Null", "CONST", "LET", "VAR", "ASYNC", "AWAIT", "EXPORT", 
			"IMPORT", "EXPORT_DEFAULT", "FROM", "AS", "USESTATE", "USEEFFECT", "CREATEELEMENT", 
			"USEREF", "HTML_ATTRIBUTE_NAME", "IDENTIFIER", "ONCLICK"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ReactParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ReactParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public FunctionalComponentContext functionalComponent() {
			return getRuleContext(FunctionalComponentContext.class,0);
		}
		public ExportDefaultContext exportDefault() {
			return getRuleContext(ExportDefaultContext.class,0);
		}
		public TerminalNode EXPORT_DEFAULT() { return getToken(ReactParser.EXPORT_DEFAULT, 0); }
		public List<TerminalNode> SEMI() { return getTokens(ReactParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(ReactParser.SEMI, i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReactParserVisitor ) return ((ReactParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(171);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(168);
					statement();
					}
					} 
				}
				setState(173);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(202);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FUNCTION:
			case CONST:
				{
				{
				setState(174);
				functionalComponent();
				setState(178);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & -520884665770577796L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 65087L) != 0)) {
					{
					{
					setState(175);
					statement();
					}
					}
					setState(180);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(181);
				exportDefault();
				setState(185);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SEMI) {
					{
					{
					setState(182);
					match(SEMI);
					}
					}
					setState(187);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				break;
			case EXPORT_DEFAULT:
				{
				{
				setState(188);
				match(EXPORT_DEFAULT);
				setState(189);
				functionalComponent();
				setState(193);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & -520884665770577796L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 65087L) != 0)) {
					{
					{
					setState(190);
					statement();
					}
					}
					setState(195);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(199);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SEMI) {
					{
					{
					setState(196);
					match(SEMI);
					}
					}
					setState(201);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(ReactParser.IDENTIFIER, 0); }
		public TerminalNode EVENT_ATTRIBUTE() { return getToken(ReactParser.EVENT_ATTRIBUTE, 0); }
		public TerminalNode HTML_ATTRIBUTE_NAME() { return getToken(ReactParser.HTML_ATTRIBUTE_NAME, 0); }
		public TerminalNode USESTATE() { return getToken(ReactParser.USESTATE, 0); }
		public TerminalNode USEEFFECT() { return getToken(ReactParser.USEEFFECT, 0); }
		public TerminalNode USEREF() { return getToken(ReactParser.USEREF, 0); }
		public IdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_id; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).enterId(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).exitId(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReactParserVisitor ) return ((ReactParserVisitor<? extends T>)visitor).visitId(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdContext id() throws RecognitionException {
		IdContext _localctx = new IdContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_id);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(204);
			_la = _input.LA(1);
			if ( !(((((_la - 19)) & ~0x3f) == 0 && ((1L << (_la - 19)) & 1062849512059437057L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HooksContext extends ParserRuleContext {
		public UseStateDeclarationContext useStateDeclaration() {
			return getRuleContext(UseStateDeclarationContext.class,0);
		}
		public UseEffectDeclarationContext useEffectDeclaration() {
			return getRuleContext(UseEffectDeclarationContext.class,0);
		}
		public UseRefDeclarationContext useRefDeclaration() {
			return getRuleContext(UseRefDeclarationContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(ReactParser.SEMI, 0); }
		public HooksContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_hooks; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).enterHooks(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReactParserListener ) ((ReactParserListener)listener).exitHooks(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ReactParserVisitor ) return ((ReactParserVisitor<? extends T>)visitor).visitHooks(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HooksContext hooks() throws RecognitionException {
		HooksContext _localctx = new HooksContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_hooks);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(209);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(206);
				useStateDeclaration();
				}
				break;
			case 2:
				{
				setState(207);
				useEffectDeclaration();
				}
				break;
			case 3:
				{
				setState(208);
				useRefDeclaration();
				}
				break;
			}
			setState(212);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(211);
				match(SEMI);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
